environments/prod/passport-status-api-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-api
      app.kubernetes.io/component: api
  template:
    spec:
      containers:
        - name: passport-status-api
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 1024Mi
