environments/prod/passport-status-frontend-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-frontend
      app.kubernetes.io/component: frontend
  template:
    spec:
      containers:
        - name: passport-status-frontend
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              memory: 512Mi
