environments/prod/passport-status-maintenance-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-maintenance
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-maintenance
      app.kubernetes.io/component: maintenance
  template:
    spec:
      containers:
        - name: passport-status-maintenance
