environments/prod/artemis-deployments.yaml
#Temporary until we figure out how to auto provision the ingress with the ActiveMQArtemis spec.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-status-amq-wconsj
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    # TLS secret 'proddpinternaldtsstncom' is provisioned by the cluster platform.
    - secretName: proddpinternaldtsstncom
      hosts:
        - passport-status-amq-wconsj-0.prod-dp-internal.dts-stn.com
        - passport-status-amq-wconsj-1.prod-dp-internal.dts-stn.com
        - passport-status-amq-wconsj-2.prod-dp-internal.dts-stn.com
  rules:
    - host: passport-status-amq-wconsj-0.prod-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-amq-prod-wconsj-0-svc
                port:
                  name: wconsj-0
    - host: passport-status-amq-wconsj-1.prod-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-amq-prod-wconsj-1-svc
                port:
                  name: wconsj-1
    - host: passport-status-amq-wconsj-2.prod-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-amq-prod-wconsj-2-svc
                port:
                  name: wconsj-2
