environments/prod/passport-status-frontend-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-status-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    # TLS secret 'proddpinternaldtsstncom' is provisioned by the cluster platform.
    - secretName: proddpinternaldtsstncom
      hosts:
        - passport-status.prod-dp-internal.dts-stn.com
  rules:
    - host: passport-status.prod-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-frontend
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-passport-status-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    # TLS secret 'wildcardservicecanadaca' is provisioned by the cluster platform.
    - secretName: wildcardservicecanadaca
      hosts:
        - etatpasseport-passportstatus.service.canada.ca
  rules:
    - host: etatpasseport-passportstatus.service.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-frontend
                port:
                  name: http
